Fix alignment of font icons for related records.

--- a/themes/bootstrap3/less/components/record.less
+++ b/themes/bootstrap3/less/components/record.less
@@ -23,6 +23,8 @@
 }
 .related__icon {
   float: left;
+  width: 1.2em;
+  line-height: 1.4;
 }
 
 .media-body h1 { margin-top: 0; }
